# daily-nexus-updates

./: .dockerignore  .env.example  .gitignore  DEPLOY_DOCKER.md  Dockerfile  PIPELINE_WALKTHROUGH.md  README.md  dnuenv.sh  docker-compose.yml  pyproject.toml
app/: __init__.py  cli.py  config.py  job_store.py  main.py  models.py  pipeline.py
app/services/: __init__.py  elevenlabs_client.py  gemini_client.py  narration.py  notifier.py  reference_resolver.py  screenshotter.py  story_memory.py  tls_guard.py  video_builder.py  youtube_uploader.py
scripts/: check_cron_heartbeats.py  cleanup_output.sh  cron_cleanup_output.sh  cron_notify.py  cron_run_pipeline.sh  run_pipeline.sh
static/: styles.css
templates/: index.html
