[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "daily-nexus-update"
version = "0.1.0"
description = "FastAPI app that automates daily news video generation and optional YouTube upload."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "google-genai>=0.6.0",
  "playwright>=1.46.0",
  "pillow>=10.4.0",
  "moviepy>=1.0.3",
  "google-api-python-client>=2.141.0",
  "google-auth-oauthlib>=1.2.1",
  "google-auth-httplib2>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.9",
]

[project.scripts]
daily-nexus = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
